Added placeholder pictures, added a primary and secondary color for document. Changed section# from class to ID, made the section# wrap around container so that container decides width of content, while section defines color and settings for that section.

--- a/src/sass/base/_mixin.scss
+++ b/src/sass/base/_mixin.scss
@@ -3,3 +3,7 @@
   -webkit-border-radius: $radius;
   border-radius: $radius;
 }
+
+@mixin box-shadow($depth){
+  box-shadow: $depth $depth $depth #888;
+}
