--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,3 +1,8 @@
-$primary-color: #FFF;
+$primary-color: #009688;
+
+$secondary-color: #FFA000;
 $content-color: #000;
 $content-header-color: #009;
+
+//Primary colors:
+$white: #FFF;
