--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -3,12 +3,12 @@
   margin: auto;
 }
 
-.section1 {
+#section1 {
+  background-color: $primary-color;
   text-align: center;
 
-  h1{
-    margin-top: 30px;
-  }
+    padding-top: 30px;
+    padding-bottom: 30px;
 
   p{
     padding-top: 10px;
@@ -21,16 +21,36 @@
   }
 }
 
-.section3{
+#section2{
+  
+}
 
-  .card{
-    width: 320px;
-    height: 210px;
-  }
+#section3{
 
   ul {
     li{
-      display: inline-block;
+      display: inline-flex;
+
+      .card{
+        @include border-radius(1px);
+        @include box-shadow(1px);
+
+        border-style: solid;
+        border-color: $secondary-color;
+
+        background-color: $secondary-color;
+
+        padding: 30px;
+        margin: 10px;
+
+        width: 320px;
+        height: 210px;
+
+        img{
+          width: 320px;
+          height: 180px;
+        }
+      }
     }
   }
 }
