Deleted, since it was distracting to workflow for what I want to achieve. And overcomplicated the progress.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,8 +3,20 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(../MaterialIcons-Regular.woff2) format('woff2'),
+    url(../MaterialIcons-Regular.woff) format('woff'),
+    url(../MaterialIcons-Regular.ttf) format('truetype');
+}
+
 body {
-  background: $white;
+  background: $background-color;
   @include flexit;
   flex-direction: column;
 }
