--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,8 +1,13 @@
+//Primary colors:
+$white: #FFF;
+
+//used colors:
 $primary-color: #009688;
 
 $secondary-color: #FFA000;
+$background-color: $white;
+
 $content-color: #000;
 $content-header-color: #009;
 
-//Primary colors:
-$white: #FFF;
+$box-shadow-color: #888;
