--- a/src/sass/base/_mixin.scss
+++ b/src/sass/base/_mixin.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin box-shadow($depth){
-  box-shadow: $depth $depth $depth #888;
+  box-shadow: $depth $depth $depth $box-shadow-color;
 }
 
 @mixin flexit{
@@ -20,5 +20,5 @@
 
 @mixin flexit-center{
   -webkit-justify-content: center;
-  justify-content: center; 
+  justify-content: center;
 }
