Added more changes. Including adding font-awesome.

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -5,6 +5,7 @@ $white: #FFF;
 $primary-color: #009688;
 
 $secondary-color: #FFA000;
+$secondary-color-darker: #FF6F00;
 $background-color: $white;
 
 $content-color: #000;
