--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,6 @@
 .btn{
   background-color: $secondary-color;
-  padding: 10px 27px;
+  padding: 10px 30px;
   text-align: center;
   text-decoration: none;
   border:solid;
@@ -14,4 +14,14 @@
   margin-left: 5px;
   font-size: 16px;
 
+}
+
+.btn:hover{
+  background-color: $secondary-color-darker;
+  border-color: $secondary-color-darker;
+}
+
+.social-btn{
+  padding: 5px;
+  @include border-radius(100%);
 }
