Done more experimentation with flexbox, colorscheme and other.

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,28 +1,48 @@
 .container{
-  justify-content: center;
-  align-items: center;
+
   align-self: center;
-}
+
+  @include material-std($white);
+
+  background-color: $white;
+  padding: 10px 20px;
+  }
 
 #section1 {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 
-  background-color: $primary-color;
-
+  height: 90vh;
 
   p{
-    padding-top: 10px;
+    font-size: 24px;
+    font-weight: bold;
   }
 }
 
 #section2{
+  margin:auto;
+  @include flexit-center;
+  flex-direction: column;
+  height: 100vh;
 
+  p {
+    max-width: 720px;
+    font-size: 20px;
+  }
 }
 
 #section3{
+  margin: auto;
+  height: 100vh;
+
   ul {
+    display: inline-flex;
+    @include flexit-center;
+    flex-flow: row wrap;
     li{
+      list-style: none;
     }
   }
 }
