--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
-* {
+/**{
   margin: 0;
-  padding: 0; }
-
+  padding: 0;
+}*/
 body {
-  background: #FFF;
+  margin: 0;
+  background-color: #009688;
   -ms-box-orient: horizontal;
   display: -webkit-box;
   display: -moz-box;
@@ -11,64 +12,107 @@ body {
   display: -moz-flex;
   display: -webkit-flex;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  font-family: 'Open Sans', sans-serif; }
 
-h1 {
-  color: #009; }
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif; }
 
 a {
   text-decoration: none;
   color: #000; }
 
 .container {
-  justify-content: center;
-  align-items: center;
-  align-self: center; }
+  align-self: center;
+  border-style: solid;
+  border-color: #FFF;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 1px #666;
+  background-color: #FFF;
+  padding: 10px 20px; }
 
 #section1 {
   display: flex;
-  flex-direction: column;
-  background-color: #009688; }
+  justify-content: space-around;
+  align-items: center;
+  height: 90vh; }
   #section1 p {
-    padding-top: 10px; }
+    font-size: 24px;
+    font-weight: bold; }
+
+#section2 {
+  margin: auto;
+  -webkit-justify-content: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh; }
+  #section2 p {
+    max-width: 720px;
+    font-size: 20px; }
+
+#section3 {
+  margin: auto;
+  height: 100vh; }
+  #section3 ul {
+    display: inline-flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    flex-flow: row wrap; }
+    #section3 ul li {
+      list-style: none; }
 
 .btn {
   background-color: #FFA000;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
-  border: solid;
+  border-style: solid;
   border-color: #FFA000;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  box-shadow: 1px 1px 1px #888;
+  box-shadow: 1px 1px 1px #666;
   display: inline-block;
   margin-left: 5px;
-  font-size: 16px; }
+  font-size: 1.1em; }
+  .btn i {
+    margin-right: 5px; }
 
 .btn:hover {
   background-color: #FF6F00;
   border-color: #FF6F00; }
 
-.social-btn {
-  padding: 5px;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  border-radius: 100%; }
+.navigation {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: #00695C;
+  align-items: center;
+  height: 10vh; }
+  .navigation .navbrand {
+    margin-left: 10px; }
+  .navigation .navmenu ul {
+    list-style: none;
+    display: inline-flex; }
+    .navigation .navmenu ul li {
+      margin-right: 10px;
+      font-size: 1.4em;
+      text-transform: uppercase;
+      background-color: #00695C; }
 
 .card {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  box-shadow: 1px 1px 1px #888;
+  box-shadow: 1px 1px 1px #666;
   border-color: #FFA000;
   background-color: #FFA000;
   padding: 10px;
   margin-bottom: 20px;
   margin-right: 15px;
-  width: 256px;
-  height: 250px; }
+  width: 256px; }
   .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
     text-align: center; }
   .card img {
