--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,16 +1,20 @@
-*{
+/**{
   margin: 0;
   padding: 0;
-}
+}*/
 
 body {
-  background: $background-color;
+  margin:0;
+  background-color: $primary-color;
+
   @include flexit;
   flex-direction: column;
+
+  font-family: 'Open Sans', sans-serif;
 }
 
-h1 {
-  color: $content-header-color;
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Roboto', sans-serif;
 }
 
 a{
