Added a contact me section, added a footer, changed background of jumbotron, centered content.

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,7 +1,7 @@
 .navigation{
   margin:auto;
-  display: flex;
   justify-content: space-between;
+  flex-direction: row;
   background-color: $primary-color-darker;
   align-items: center;
   height: 10vh;
