--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,17 @@
-/**{
-  margin: 0;
-  padding: 0;
-}*/
-body {
-  margin: 0;
-  background-color: #009688;
-  -ms-box-orient: horizontal;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -moz-flex;
-  display: -webkit-flex;
+body div {
   display: flex;
+  flex-direction: column; }
+
+body {
+  margin: 0; }
+
+ul {
+  -webkit-margin-before: 0px;
+  -webkit-marghin-after: 0px;
+  -webkit-padding-start: 0px; }
+
+body {
+  background-color: #009688;
   flex-direction: column;
   font-family: 'Open Sans', sans-serif; }
 
@@ -22,46 +22,100 @@ a {
   text-decoration: none;
   color: #000; }
 
+.content {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+
 .container {
-  align-self: center;
+  flex-direction: column;
+  margin-top: 30px;
+  align-items: center; }
+
+#jumbotron {
+  margin-top: 30px; }
+  #jumbotron .jumbotron-bg {
+    display: flex;
+    width: 80vw;
+    height: 45vw;
+    background-image: url("/img/project2.jpg");
+    background-repeat: round;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px #666;
+    justify-content: center;
+    align-items: center; }
+    #jumbotron .jumbotron-bg .container {
+      padding: 10px 20px;
+      margin: auto;
+      border-style: solid;
+      border-color: #FFF;
+      -moz-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      box-shadow: 1px 1px 1px #666;
+      background-color: #FFF;
+      max-width: 80%;
+      height: auto; }
+
+#aboutMe .container {
+  background-color: #FFF;
   border-style: solid;
   border-color: #FFF;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
   box-shadow: 1px 1px 1px #666;
-  background-color: #FFF;
-  padding: 10px 20px; }
+  width: 80vw; }
 
-#section1 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 90vh; }
-  #section1 p {
-    font-size: 24px;
-    font-weight: bold; }
+#projects .container {
+  width: 80vw; }
+#projects ul {
+  display: inline-flex;
+  flex-direction: row; }
+  #projects ul li {
+    list-style: none; }
 
-#section2 {
-  margin: auto;
-  -webkit-justify-content: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 100vh; }
-  #section2 p {
-    max-width: 720px;
-    font-size: 20px; }
+#contact .container {
+  width: 80vw; }
+  #contact .container .forms {
+    width: 100%; }
+    #contact .container .forms input {
+      border-style: solid;
+      border-color: #FFF;
+      -moz-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      box-shadow: 1px 1px 1px #666;
+      background-color: #FFF;
+      margin-bottom: 10px;
+      padding: 12px 20px;
+      font-size: 1.8em; }
+      #contact .container .forms input :focus {
+        box-shadow: 4px 4px 4px #666; }
+    #contact .container .forms input[name='content'] {
+      height: 150px;
+      width: 100%; }
+    #contact .container .forms input[type=button], #contact .container .forms input[type=submit], #contact .container .forms input[type=reset] {
+      background-color: #FFA000;
+      text-align: center;
+      text-decoration: none;
+      border-style: solid;
+      border-color: #FFA000;
+      -moz-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      box-shadow: 1px 1px 1px #666;
+      display: inline-flex; }
+    #contact .container .forms input[type=button]:hover, #contact .container .forms input[type=submit]:hover, #contact .container .forms input[type=reset]:hover {
+      background-color: #FF6F00;
+      border-color: #FF6F00; }
 
-#section3 {
-  margin: auto;
-  height: 100vh; }
-  #section3 ul {
-    display: inline-flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    flex-flow: row wrap; }
-    #section3 ul li {
-      list-style: none; }
+.footer {
+  background-color: #00695C;
+  padding: 10px 0 10px 0;
+  margin-top: 30px; }
 
 .btn {
   background-color: #FFA000;
@@ -74,9 +128,10 @@ a {
   -webkit-border-radius: 2px;
   border-radius: 2px;
   box-shadow: 1px 1px 1px #666;
-  display: inline-block;
+  display: inline-flex;
   margin-left: 5px;
-  font-size: 1.1em; }
+  font-size: 1.1em;
+  cursor: pointer; }
   .btn i {
     margin-right: 5px; }
 
@@ -86,8 +141,8 @@ a {
 
 .navigation {
   margin: auto;
-  display: flex;
   justify-content: space-between;
+  flex-direction: row;
   background-color: #00695C;
   align-items: center;
   height: 10vh; }
@@ -103,20 +158,21 @@ a {
       background-color: #00695C; }
 
 .card {
+  flex-grow: 1;
+  border-style: solid;
+  border-color: #FFF;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
   box-shadow: 1px 1px 1px #666;
-  border-color: #FFA000;
-  background-color: #FFA000;
+  background-color: #FFF;
   padding: 10px;
   margin-bottom: 20px;
-  margin-right: 15px;
-  width: 256px; }
+  margin-right: 5px; }
   .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
     text-align: center; }
   .card img {
-    width: 236px;
-    height: 180px; }
+    max-width: 100%;
+    height: auto; }
 
 /*# sourceMappingURL=main.css.map */
