--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,48 +1,100 @@
-.container{
-
-  align-self: center;
-
-  @include material-std($white);
-
-  background-color: $white;
-  padding: 10px 20px;
-  }
-
-#section1 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-  height: 90vh;
-
-  p{
-    font-size: 24px;
-    font-weight: bold;
-  }
-}
-
-#section2{
-  margin:auto;
-  @include flexit-center;
+.content{
   flex-direction: column;
-  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  p {
-    max-width: 720px;
-    font-size: 20px;
+.container{
+  flex-direction: column;
+  margin-top: 30px;
+  align-items: center;
+  }
+
+#jumbotron{
+  margin-top: 30px;
+  .jumbotron-bg{
+    display: flex;
+    width: 80vw;
+    height: 45vw;
+    background-image: url("/img/project2.jpg");
+    background-repeat:round;
+    @include border-radius(2px);
+    @include box-shadow(1px);
+    justify-content: center;
+    align-items: center;
+    .container{
+      padding: 10px 20px;
+      margin:auto;
+      @include material-std($white);
+      background-color: $white;
+      max-width: 80%;
+      height: auto;
+    }
   }
 }
 
-#section3{
-  margin: auto;
-  height: 100vh;
+#aboutMe{
+  .container{
+    background-color: $white;
+    @include material-std($white);
+    width: 80vw;
+  }
 
+}
+
+#projects{
+
+  .container{
+    width: 80vw;
+  }
   ul {
     display: inline-flex;
-    @include flexit-center;
-    flex-flow: row wrap;
+    flex-direction: row;
     li{
       list-style: none;
     }
   }
+}
+
+#contact{
+
+  .container{
+    width: 80vw;
+    .forms{
+      width:100%;
+      input{
+        @include material-std($white);
+        background-color: $white;
+
+        margin-bottom: 10px;
+        padding:12px 20px;
+
+        font-size: 1.8em;
+
+        :focus{
+          @include box-shadow(4px);
+        }
+
+      }
+      input[name='content']{
+        height:150px;
+        width: 100%;
+      }
+
+      input[type=button], input[type=submit], input[type=reset]{
+        background-color: $secondary-color;
+        text-align: center;
+        text-decoration: none;
+
+        @include material-std($secondary-color);
+
+        display: inline-flex;
+      }
+      input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover{
+        background-color: $secondary-color-darker;
+        border-color: $secondary-color-darker;
+      }
+    }
+  }
+
 }
