--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,7 +6,7 @@
 
   @include material-std($secondary-color);
 
-  display: inline-block;
+  display: inline-flex;
 
   margin-left: 5px;
   font-size: 1.1em;
@@ -14,6 +14,7 @@
   i{
     margin-right: 5px;
   }
+  cursor: pointer;
 }
 
 .btn:hover{
