--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,23 +1,19 @@
 .card{
-  @include border-radius(2px);
-  @include box-shadow(1px);
+  flex-grow: 1;
+  @include material-std($background-color);
 
-  border-color: $secondary-color;
-
-  background-color: $secondary-color;
+  background-color: $background-color;
 
   padding: 10px;
   margin-bottom: 20px;
-  margin-right: 15px;
-
-  width: 256px;
+  margin-right: 5px;
 
   h1,h2,h3,h4,h5,h6{
     text-align: center;
   }
 
   img{
-    width: 236px;
-    height: 180px;
+    max-width: 100%;
+    height: auto;
   }
 }
