--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,7 +7,7 @@
   @include material-std($secondary-color);
 
   display: inline-flex;
-
+  margin-top: 5px;
   margin-left: 5px;
   font-size: 1.1em;
 
