--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,13 @@
 
 //Modules
 
+@import 'modules/jumbotron';
+@import 'modules/aboutme';
+@import 'modules/projects';
+@import 'modules/contact';
 @import 'modules/header';
 @import 'modules/footer';
+
 
 //Components wich are small f.example buttons.
 
