--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -1,4 +1,4 @@
-body div{
+body, div{
   display:flex;
   flex-direction: column;
 }
@@ -12,4 +12,12 @@ ul{
   -webkit-margin-before:0px;
   -webkit-marghin-after:0px;
   -webkit-padding-start:0px;
+  display: flex;
+  li{
+    display: flex;
+  }
+}
+
+nav, footer,h1,h2,h3,h4,h5,h6,i,span{
+  display:flex;
 }
