--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,7 +1,19 @@
 .footer{
+  width:100%;
+  align-items: center;
   background-color: $primary-color-darker;
-  padding: 10px 0 10px 0;
+  padding: 20px 0 10px 0;
 
   margin-top: 30px;
 
+  ul{
+    list-style: none;
+    li{
+      margin-right: 10px;
+
+      font-size: 1.4em;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+  }
 }
