--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -5,6 +5,7 @@ body, div{
 
 body {
   margin:0;
+  overflow-x:hidden;
 
 }
 
@@ -13,9 +14,7 @@ ul{
   -webkit-marghin-after:0px;
   -webkit-padding-start:0px;
   display: flex;
-  li{
-    display: flex;
-  }
+  flex-direction: column;
 }
 
 nav, footer,h1,h2,h3,h4,h5,h6,i,span{
