--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -7,26 +7,75 @@
   background-color: $primary-color-darker;
   height: 10vh;
 
+  ul{
+    list-style: none;
+    flex-direction: row;
+    li{
+      margin-right: 10px;
+
+      font-size: 1.2em;
+      font-weight: bold;
+
+      text-transform: uppercase;
+    }
+  }
+
+
   .navbrand{
     margin-left: 10px;
   }
 
   .open-slide{
-    margin-left: 20px; 
+    margin-left: 20px;
   }
 
   .navbar-nav{
     margin-left: 10px;
-    ul{
-      list-style: none;
-      li{
-        margin-right: 10px;
-
-        font-size: 1.2em;
-        font-weight: bold;
-
-        text-transform: uppercase;
-      }
-    }
   }
+}
+
+.side-nav{
+  height: 100%;
+  width:0;
+  position: fixed;
+  z-index: 1;
+  top:0;
+  left:0;
+  background-color: #111;
+  opacity: 0.9;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+
+  a{
+    padding:10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: $white;
+    transition: 0.3s;
+  }
+
+  a:hover{
+    color:#fff;
+  }
+
+  .btn-close{
+    position: absolute;
+    top:0;
+    right:22px;
+    font-size: 1.8em;
+    margin-left: 50px;
+  }
+}
+
+.content{
+  transition: margin-left 0.5s;
+  overflow:hidden;
+  width:100%;
+}
+
+@media screen and (max-width:$break){
+  .navbar-nav{display: none;}
+
 }
