--- a/css/main.css
+++ b/css/main.css
@@ -208,12 +208,14 @@ a {
   overflow-x: hidden;
   padding-top: 60px;
   transition: 0.5s; }
+  .side-nav li {
+    margin: 8px 0 0 0; }
   .side-nav a {
     padding: 10px 10px 10px 30px;
     text-decoration: none;
     font-size: 1.2em;
     font-weight: bold;
-    color: #FFF;
+    color: #ccc;
     transition: 0.3s; }
   .side-nav a:hover {
     color: #fff; }
