--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -47,12 +47,16 @@
   padding-top: 60px;
   transition: 0.5s;
 
+  li{
+    margin: 8px 0 0 0;
+  }
+
   a{
     padding:10px 10px 10px 30px;
     text-decoration: none;
     font-size: 1.2em;
     font-weight: bold;
-    color: $white;
+    color: #ccc;
     transition: 0.3s;
   }
 
