--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,5 +1,6 @@
 .btn{
   background-color: $secondary-color;
+  opacity: 1.0;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
