--- a/css/main.css
+++ b/css/main.css
@@ -41,18 +41,14 @@ a {
 #jumbotron {
   margin-top: 30px; }
   #jumbotron .jumbotron-bg {
-    display: flex;
     width: 80vw;
     height: 45vw;
-    min-height: 320px;
     background-image: url("/img/project2.jpg");
     background-repeat: round;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-    box-shadow: 1px 1px 1px #666;
-    justify-content: center;
-    align-items: center; }
+    box-shadow: 1px 1px 1px #666; }
     #jumbotron .jumbotron-bg .container {
       padding: 10px 20px;
       margin: auto;
@@ -63,8 +59,20 @@ a {
       border-radius: 2px;
       box-shadow: 1px 1px 1px #666;
       background-color: #FFF;
-      max-width: 80%;
-      height: auto; }
+      max-width: 80%; }
+      #jumbotron .jumbotron-bg .container ul {
+        flex-direction: row; }
+  @media screen and (max-width: 1070px) {
+    #jumbotron .jumbotron-bg .container {
+      transition: 0.3s;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      max-width: none;
+      padding: 0;
+      margin: auto; }
+      #jumbotron .jumbotron-bg .container ul {
+        flex-direction: column; } }
 
 #aboutMe .container {
   background-color: #FFF;
@@ -152,6 +160,7 @@ a {
 
 .btn {
   background-color: #FFA000;
+  opacity: 1.0;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
@@ -176,21 +185,20 @@ a {
 #navbar {
   margin: auto;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: baseline;
   flex-flow: row;
   background-color: #00695C;
-  height: 10vh; }
+  height: 5vh;
+  padding: 20px 0px 0px 0px; }
   #navbar ul {
     list-style: none;
     flex-direction: row; }
     #navbar ul li {
       margin-right: 10px;
-      font-size: 1.2em;
+      font-size: 1.6em;
       font-weight: bold;
       text-transform: uppercase; }
-  #navbar .navbrand {
-    margin-left: 10px; }
   #navbar .open-slide {
     margin-left: 20px; }
   #navbar .navbar-nav {
@@ -231,7 +239,7 @@ a {
   overflow: hidden;
   width: 100%; }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1070px) {
   .navbar-nav {
     display: none; } }
 .card {
