--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,25 +1,38 @@
 #jumbotron{
   margin-top: 30px;
   .jumbotron-bg{
-    display: flex;
     width: 80vw;
     height: 45vw;
-    min-height: 320px;
 
     background-image: url("/img/project2.jpg");
     background-repeat:round;
     @include border-radius(2px);
     @include box-shadow(1px);
-    justify-content: center;
-    align-items: center;
     .container{
       padding: 10px 20px;
       margin:auto;
       @include material-std($white);
       background-color: $white;
-      max-width: 80%;
-      height: auto;
 
+      max-width: 80%;
+
+      ul{
+        flex-direction: row;
+      }
+
+    }
+  }
+  @media screen and (max-width: $break-large){
+    .jumbotron-bg{
+      .container {
+        transition: 0.3s;
+        justify-content: center;
+        width:100%;
+        height: 100%;
+        max-width: none;
+        padding:0;
+        margin:auto;
+        ul{flex-direction: column;}}
     }
   }
 }
