--- a/css/main.css
+++ b/css/main.css
@@ -52,13 +52,11 @@ a {
     #jumbotron .jumbotron-bg .container {
       padding: 10px 20px;
       margin: auto;
-      border-style: solid;
-      border-color: #FFF;
       -moz-border-radius: 2px;
       -webkit-border-radius: 2px;
       border-radius: 2px;
       box-shadow: 1px 1px 1px #666;
-      background-color: #FFF;
+      background-color: rgba(255, 255, 255, 0.7);
       max-width: 80%; }
       #jumbotron .jumbotron-bg .container ul {
         flex-direction: row; }
@@ -76,8 +74,6 @@ a {
 
 #aboutMe .container {
   background-color: #FFF;
-  border-style: solid;
-  border-color: #FFF;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
@@ -103,8 +99,6 @@ a {
     #contact .container .forms {
       width: 100%; }
       #contact .container .forms input {
-        border-style: solid;
-        border-color: #FFF;
         -moz-border-radius: 2px;
         -webkit-border-radius: 2px;
         border-radius: 2px;
@@ -119,8 +113,6 @@ a {
         display: flex;
         width: 100%;
         padding: 12px 20px;
-        border-style: solid;
-        border-color: #FFF;
         -moz-border-radius: 2px;
         -webkit-border-radius: 2px;
         border-radius: 2px;
@@ -131,8 +123,6 @@ a {
         background-color: #FFA000;
         text-align: center;
         text-decoration: none;
-        border-style: solid;
-        border-color: #FFA000;
         -moz-border-radius: 2px;
         -webkit-border-radius: 2px;
         border-radius: 2px;
@@ -146,7 +136,7 @@ a {
 .footer {
   width: 100%;
   align-items: center;
-  background-color: #00695C;
+  background-color: #00695c;
   padding: 20px 0 10px 0;
   margin-top: 30px; }
   .footer ul {
@@ -164,8 +154,6 @@ a {
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
-  border-style: solid;
-  border-color: #FFA000;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
@@ -188,7 +176,7 @@ a {
   justify-content: flex-start;
   align-items: baseline;
   flex-flow: row;
-  background-color: #00695C;
+  background-color: #00695c;
   height: 5vh;
   padding: 20px 0px 0px 0px; }
   #navbar ul {
@@ -243,8 +231,6 @@ a {
   .navbar-nav {
     display: none; } }
 .card {
-  border-style: solid;
-  border-color: #FFF;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
