--- a/sass/modules/_aboutme.scss
+++ b/sass/modules/_aboutme.scss
@@ -1,7 +1,7 @@
 #aboutMe{
   .container{
     background-color: $white;
-    @include material-std($white);
+    @include material-std;
     width: 80vw;
   }
 }
