Fixed border on submit button, made the navigation follow the top window, changed id from contentid to start.

--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -33,7 +33,10 @@
         text-align: center;
         text-decoration: none;
 
+        border-style: solid;
+        border-color: $secondary-color;
         @include material-std;
+
       }
 
       input[type=email]{
