--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ a {
   align-items: center; }
 
 #jumbotron {
-  margin-top: 30px; }
+  margin-top: 10vh; }
   #jumbotron .jumbotron-bg {
     width: 80vw;
     height: 45vw;
@@ -62,7 +62,6 @@ a {
         flex-direction: row; }
   @media screen and (max-width: 1070px) {
     #jumbotron .jumbotron-bg .container {
-      transition: 0.3s;
       justify-content: center;
       width: 100%;
       height: 100%;
@@ -123,6 +122,8 @@ a {
         background-color: #FFA000;
         text-align: center;
         text-decoration: none;
+        border-style: solid;
+        border-color: #FFA000;
         -moz-border-radius: 2px;
         -webkit-border-radius: 2px;
         border-radius: 2px;
@@ -171,6 +172,7 @@ a {
   border-color: #FF6F00; }
 
 #navbar {
+  position: fixed;
   margin: auto;
   width: 100%;
   justify-content: flex-start;
