--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,5 +1,5 @@
 #jumbotron{
-  margin-top: 30px;
+  margin-top: 10vh;
   .jumbotron-bg{
     width: 80vw;
     height: 45vw;
@@ -13,7 +13,6 @@
       margin:auto;
       @include material-std;
       background-color: $jumbotron-bg;
-
       max-width: 80%;
 
       ul{
@@ -25,7 +24,6 @@
   @media screen and (max-width: $break-large){
     .jumbotron-bg{
       .container {
-        transition: 0.3s;
         justify-content: center;
         width:100%;
         height: 100%;
