--- a/css/main.css
+++ b/css/main.css
@@ -42,16 +42,16 @@ a {
   margin-top: 10vh; }
   #jumbotron .jumbotron-bg {
     width: 80vw;
-    height: 45vw;
+    height: auto;
     background-image: url("/img/project2.jpg");
-    background-repeat: round;
+    background-repeat: no-repeat;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
     box-shadow: 1px 1px 1px #666; }
     #jumbotron .jumbotron-bg .container {
       padding: 10px 20px;
-      margin: auto;
+      margin: 30vh auto;
       -moz-border-radius: 2px;
       -webkit-border-radius: 2px;
       border-radius: 2px;
@@ -65,9 +65,9 @@ a {
       justify-content: center;
       width: 100%;
       height: 100%;
-      max-width: none;
-      padding: 0;
-      margin: auto; }
+      margin: auto;
+      padding: 30vh 0;
+      max-width: none; }
       #jumbotron .jumbotron-bg .container ul {
         flex-direction: column; } }
 
