--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -15,12 +15,16 @@
 
         :focus{
           @include box-shadow(4px);
+
         }
 
       }
 
       textarea{
         display: flex;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
         width: 100%;
         padding:12px 20px;
         @include material-std;
@@ -41,6 +45,9 @@
 
       input[type=email]{
         width: 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
       }
 
       input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover{
