--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -1,22 +1,33 @@
-body, div{
+*{
+  box-sizing:border-box;
+}
+
+body, div, ul, li,nav, footer,h1,h2,h3,h4,h5,h6,i,span{
   display:flex;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+h1,h2,h3,h4,h5,h6{
+  align-self: flex-start;
 }
 
 body {
-  margin:0;
+  margin:0 auto;
   overflow-x:hidden;
+  line-height: 1.3;
 
 }
 
-ul{
+ul, li{
+  margin:0;
+  padding:0;
+  list-style:none;
   -webkit-margin-before:0px;
   -webkit-marghin-after:0px;
   -webkit-padding-start:0px;
   display: flex;
-  flex-direction: column;
 }
 
-nav, footer,h1,h2,h3,h4,h5,h6,i,span{
-  display:flex;
+img{
+  width:100%
 }
