--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,49 +1,32 @@
-.card{
-  @include material-std;
-  background-color: $background-color;
+ .card-item{
+  display: flex;
+  padding: 0.5em;
+  width:100%;
+  flex-grow: 1;
 
-  padding: 0 10px 10px 10px;
-  width: 250px;
-  margin-bottom: 10px;
-  margin-right: 3px;
-
-  img{
-    width: 100%;
-    height: auto;
+    @media all and (min-width:40em){
+      width:50%;
+      flex-grow: 0;
   }
 
-  p{display: none;}
 
-  .btn{
-    align-self: center;
+  @media all and (min-width:60em){
+      width:30%;
+      flex-grow: 0;
   }
-
 }
 
 
-.card.highlight{
 
-  order: -1;
-  width:100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-flow: row wrap;
-  padding-bottom: 20px;
+.card-content{
+  @include material-std;
+  background-color: $background-color;
+  display:flex;
+  flex-direction: column;
+  padding: 1em;
 
-  h3{
-    width:100%
+  p{
+    flex: 1 0 auto;
   }
-    img{
-      width:30%;
-      height: auto;
-    }
 
-    p{
-      display: inherit;
-      margin-left: 20px;
-    }
-    .btn{
-      display: none;
-    }
-  }
+}
