--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,5 +1,5 @@
 #jumbotron{
-  margin-top: 10vh;
+  margin-top: 100px;
   .jumbotron-bg{
     width: 80vw;
     height: auto;
@@ -9,6 +9,11 @@
     @include border-radius(2px);
     @include box-shadow(1px);
     .container{
+      font-size: 120%;
+      h2{
+        align-self: center;
+        width:80%;
+      }
       padding: 10px 20px;
       margin: 30vh auto;
       @include material-std;
@@ -28,7 +33,7 @@
         width:100%;
         height: 100%;
         margin:auto;
-        padding: 30vh 0;
+        padding: 10vh 0;
         max-width: none;
         ul{flex-direction: column;}}
     }
