--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,20 +1,23 @@
 .footer{
-  width:100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: 120%;
+  font-weight: bold;
+  text-transform: uppercase;
+
   align-items: center;
   background-color: $primary-color-darker;
   padding: 20px 0 10px 0;
 
   margin-top: 30px;
 
+
   ul{
     list-style: none;
     flex-direction: row;
     li{
       margin-right: 10px;
-
-      font-size: 1.4em;
-      font-weight: bold;
-      text-transform: uppercase;
     }
   }
 }
