--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ a {
 
 .footer {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   width: 100%;
   font-size: 120%;
@@ -164,6 +165,8 @@ a {
   background-color: #00695c;
   padding: 20px 0 10px 0;
   margin-top: 30px; }
+  .footer p {
+    font-weight: bold; }
   .footer ul {
     list-style: none;
     flex-direction: row; }
