--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,5 +1,6 @@
 .footer{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   width: 100%;
   font-size: 120%;
@@ -12,6 +13,9 @@
 
   margin-top: 30px;
 
+  p{
+    font-weight: bold;
+  }
 
   ul{
     list-style: none;
