made the width of content go to 100% when small.

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -8,5 +8,9 @@
   flex-direction: column;
   margin-top: 30px;
   align-items: center;
-  width: 80vw;
+  width: 100%;
+
+  @media all and (min-width:40em){
+    width:80vw;
   }
+}
