--- a/css/main.css
+++ b/css/main.css
@@ -46,11 +46,18 @@ a {
   flex-direction: column;
   margin-top: 30px;
   align-items: center;
-  width: 80vw; }
+  width: 100%; }
+  @media all and (min-width: 40em) {
+    .container {
+      width: 80vw; } }
 
 #jumbotron {
-  margin-top: 90px; }
+  display: flex;
+  justify-content: center;
+  margin-top: 90px;
+  width: 100%; }
   #jumbotron .jumbotron-bg {
+    width: 100%;
     background-image: url("/img/jumbotron-bgp.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -59,7 +66,7 @@ a {
     border-radius: 2px;
     box-shadow: 1px 1px 1px #666; }
     #jumbotron .jumbotron-bg .container {
-      margin: auto;
+      margin: 0;
       padding: 20vh 0;
       font-size: 120%;
       -moz-border-radius: 2px;
@@ -71,18 +78,13 @@ a {
         margin: 0 10%;
         align-self: center; }
       #jumbotron .jumbotron-bg .container ul {
-        flex-direction: row; }
-  @media screen and (max-width: 1070px) {
+        flex-direction: column; }
+  @media all and (min-width: 40em) {
     #jumbotron .jumbotron-bg {
-      width: 100%;
-      height: 100%; }
-      #jumbotron .jumbotron-bg .container {
-        justify-content: center;
-        margin: auto;
-        padding: 10vh 0;
-        max-width: none; }
-        #jumbotron .jumbotron-bg .container ul {
-          flex-direction: column; } }
+      width: 80vw; } }
+  @media all and (min-width: 60em) {
+    #jumbotron .jumbotron-bg .container ul {
+      flex-direction: row; } }
 
 #aboutMe .container {
   display: flex;
@@ -93,16 +95,13 @@ a {
   -webkit-border-radius: 2px;
   border-radius: 2px;
   box-shadow: 1px 1px 1px #666;
-  width: 80vw;
   padding: 0 15px 20px 15px; }
 
-#projects .container {
-  width: 80vw; }
-  #projects .container ul {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: row; }
+#projects .container ul {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: row; }
 
 #contact {
   display: flex; }
