--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,14 +1,20 @@
 #jumbotron{
+  display:flex;
+  justify-content: center;
   margin-top: 90px;
+  width:100%;
 
   .jumbotron-bg{
+    width:100%;
+
     background-image: url("/img/jumbotron-bgp.jpg");
     background-size: cover;
     background-repeat:no-repeat;
+
     @include border-radius(2px);
     @include box-shadow(1px);
     .container{
-      margin:auto;
+      margin:0;
       padding: 20vh 0;
       font-size: 120%;
       h2{
@@ -19,20 +25,21 @@
       background-color: $jumbotron-bg;
 
       ul{
-        flex-direction: row;
+      flex-direction: column;
       }
     }
   }
-  @media screen and (max-width: $break-large){
+
+  @media all and (min-width:40em){
     .jumbotron-bg{
-      width:100%;
-      height: 100%;
-      .container {
-        justify-content: center;
-        margin:auto;
-        padding: 10vh 0;
-        max-width: none;
-        ul{flex-direction: column;}}
+        width:80vw;
+      }
     }
-  }
+
+
+    @media all and (min-width:60em){
+      .jumbotron-bg .container{
+            ul{flex-direction: row;}
+      }
+    }
 }
