Added wiki viewer, fixed the anchor tag css.

--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,4 +1,10 @@
 #jumbotron{
+
+  a{
+    text-decoration: none;
+    color: $content-color;
+  }
+
   display:flex;
   justify-content: center;
   margin-top: 90px;
