--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif; }
 
-a {
-  text-decoration: none;
-  color: #000; }
-
 .content {
   flex-direction: column;
   justify-content: space-between;
@@ -56,6 +52,9 @@ a {
   justify-content: center;
   margin-top: 90px;
   width: 100%; }
+  #jumbotron a {
+    text-decoration: none;
+    color: #000; }
   #jumbotron .jumbotron-bg {
     width: 100%;
     background-image: url("/img/jumbotron-bgp.jpg");
@@ -164,6 +163,9 @@ a {
   background-color: #00695c;
   padding: 20px 0 10px 0;
   margin-top: 30px; }
+  .footer a {
+    text-decoration: none;
+    color: #000; }
   .footer p {
     font-weight: bold; }
   .footer ul {
@@ -204,6 +206,9 @@ a {
   background-color: #00695c;
   height: auto;
   padding: 20px 0px 20px 0px; }
+  #navbar a {
+    text-decoration: none;
+    color: #000; }
   #navbar ul {
     list-style: none;
     flex-direction: row; }
