--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,4 +1,8 @@
 .footer{
+  a{
+    text-decoration: none;
+    color: $content-color;
+  }
   display: flex;
   justify-content: center;
   flex-direction: column;
